removed bot, only website now

--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-COMPETITIVE COUNTING
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Competitive Counting</title>
+
+    <link rel="stylesheet" href="styles.css">
+
+</head>
+
+<body>
+    <header>COMPETITIVE COUNTING</header>
+    <br />
+    <button id="loginWithDiscordBtn"> Login with Discord</button>
+    <script src="script.js"></script>
+</body>
+</html>
