--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<head>
+﻿<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Competitive Counting</title>
@@ -10,7 +10,6 @@
 <body>
     <header>COMPETITIVE COUNTING</header>
     <br />
-    <button id="loginWithDiscordBtn"> Login with Discord</button>
+    <a href="https://discord.com/api/oauth2/authorize?response_type=code&client_id=898161954378641418&scope=identify&redirect_uri=https%3A%2F%2Fdajabecoding.github.io%2FCompetitiveCounting&prompt=consent"> Login with Discord</a>
     <script src="script.js"></script>
 </body>
-</html>
