--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <img id="avatar" /> />Hello 
     <label id="nameLbl">anonymous</label>
     !
-    <a href="/CompetitiveCounting/Login/Autorisiere%20den%20Zugang%20zu%20deinem%20Account.html?response_type=code&client_id=898161954378641418&scope=identify&redirect_uri=https%3A%2F%2Fdajabecoding.github.io%2FCompetitiveCounting&prompt=consent"> Login with Discord not</a>
+    <!--><a href="/CompetitiveCounting/Login/Autorisiere%20den%20Zugang%20zu%20deinem%20Account.html?response_type=code&client_id=898161954378641418&scope=identify&redirect_uri=https%3A%2F%2Fdajabecoding.github.io%2FCompetitiveCounting&prompt=consent"> Login with Discord not</a></!-->
     <a href="https://discord.com/api/oauth2/authorize?response_type=code&client_id=898161954378641418&scope=identify&redirect_uri=https%3A%2F%2Fdajabecoding.github.io%2FCompetitiveCounting&prompt=consent"> Login with Discord</a>
     <script src="script.js"></script>
 </body>
