--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>COMPETITIVE COUNTING</header>
     <br />
-    <img id="avatar" /> />Hello 
+    <img id="avatar" width="50" height="50"/>Hello 
     <label id="nameLbl">anonymous</label>
     !
     <!--><a href="/CompetitiveCounting/Login/Autorisiere%20den%20Zugang%20zu%20deinem%20Account.html?response_type=code&client_id=898161954378641418&scope=identify&redirect_uri=https%3A%2F%2Fdajabecoding.github.io%2FCompetitiveCounting&prompt=consent"> Login with Discord not</a></!-->
